| Summary: | ASTERISK-27328: Missing openssl dependencies in res_rtp_asterisk and tcptls | ||
| Reporter: | Tzafrir Cohen (tzafrir) | Labels: | |
| Date Opened: | 2017-10-10 07:38:01 | Date Closed: | 2017-10-16 09:16:04 |
| Priority: | Minor | Regression? | No |
| Status: | Closed/Complete | Components: | Resources/res_rtp_asterisk |
| Versions: | 13.17.2 15.0.0-rc1 | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | Some source files seem to have optional dependencies on OpenSSL:
{code} $ grep -l 'HAVE_OPENSSL' */*.c main/libasteriskssl.c main/tcptls.c res/res_rtp_asterisk.c res/res_srtp.c res/res_xmpp.c {code} * res_srtp.c: no explicit dependency. However, depends on libsrtp. * res_xmpp: has a 'use' for openssl * libasteriskssl.c: no dependencies. I figure it is handled explicitly in the build system. * tcptls.c: No dependency. Maybe worth adding a 'use' * res_rtp_asterisk.c: No dependency. Probably worth adding a 'use' | ||
| Comments: | By: Asterisk Team (asteriskteam) 2017-10-10 07:38:02.181-0500 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. By: Friendly Automation (friendly-automation) 2017-10-16 09:16:05.308-0500 Change 6809 merged by Jenkins2: declare optional openssl dependencies in moduleinfo [https://gerrit.asterisk.org/6809|https://gerrit.asterisk.org/6809] By: Friendly Automation (friendly-automation) 2017-10-16 09:20:37.721-0500 Change 6720 merged by Jenkins2: declare optional openssl dependencies in moduleinfo [https://gerrit.asterisk.org/6720|https://gerrit.asterisk.org/6720] By: Friendly Automation (friendly-automation) 2017-10-16 09:26:26.055-0500 Change 6808 merged by Jenkins2: declare optional openssl dependencies in moduleinfo [https://gerrit.asterisk.org/6808|https://gerrit.asterisk.org/6808] | ||