main/tcptls.c
@@ -26,6 +26,7 @@
  */
 
 /*** MODULEINFO
+	<use type="external">openssl</use>
 	<support_level>core</support_level>
  ***/
 
